gobmkida/c3/sgfStartVariantFirst
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariantFirst/src/sgf/sgfnode.c:1135:12: error: expected expression
*( _OWORD *)&result->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariantFirst/src/sgf/sgfnode.c:1135:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->props = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariantFirst/src/obj/4/sgfnode.o] Error 1
